Зугрузка быстрее, поддержка ARM64 запуск.